fix: center alignment for error message in dashboard tiles

--- a/src/components/Dashboard/DashboardTile/DashboardTile.scss
+++ b/src/components/Dashboard/DashboardTile/DashboardTile.scss
@@ -129,8 +129,8 @@
   padding-top: 0;
   background: inherit;
 
-  .query-output-error-message {
-    opacity: 0.8;
+  .query-output-error-message,
+  .no-columns-error-message {
     margin: auto;
   }
 
@@ -196,6 +196,7 @@
 
   .react-autoql-response-content-container {
     padding: 7px;
+    align-items: center;
   }
 }
 
